public class AnimationTags
{
    public const string MOVEMENT = "Movement";
    
    public const string PUNCH_1_TRIGGER = "Punch 1";
    public const string PUNCH_2_TRIGGER = "Punch 2";
    public const string PUNCH_3_TRIGGER = "Punch 3";
    
    public const string KICK_1_TRIGGER = "Kick 1";
    public const string KICK_2_TRIGGER = "Kick 2";
    
    public const string ATTACK_1_TRIGGER = "Attack 1";
    public const string ATTACK_2_TRIGGER = "Attack 2";
    public const string ATTACK_3_TRIGGER = "Attack 3";
    
    public const string IDLE_ANIMATION = "Idle";
    
    public const string KNOCK_DOWN_TRIGGER = "Knock Down";
    public const string STAND_UP_TRIGGER = "Stand Up";
    public const string HIT_RIGGER = "Hit";
    public const string DEATH_TRIGGER = "Death";
}

public class Axis
{
    public const string HORIZONTAL_AXIS = "Horizontal";
    public const string VERTICAL_AXIS = "Vertical";
}

public class Buttons
{
    public const string PUNCH_1_BUTTON = "joystick button 2";
    public const string KICK_1_BUTTON = "joystick button 3";
}

public class Tags
{
    public const string GROUND_TAG = "Ground";
    public const string PLAYER_TAG = "Player";
    public const string ENEMY_TAG = "Enemy";
    
    public const string LEFT_ARM_TAG = "LeftArm";
    public const string LEFT_LEG__TAG = "LeftLeg";
    public const string UNTAGGED_TAG = "Untagged";
    public const string MAIN_CAMERA_TAG = "Main Camera";
    public const string HEALTH_UI = "Health UI";
}